cabal-version: 1.12
name:           beginner-error-messages
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/parsonsmatt/beginner-error-messages#readme>
homepage:       https://github.com/parsonsmatt/beginner-error-messages#readme
bug-reports:    https://github.com/parsonsmatt/beginner-error-messages/issues
author:         Matt Parsons
maintainer:     parsonsmattt@gmail.com
copyright:      2019 Matt Parsons
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/parsonsmatt/beginner-error-messages

library
  exposed-modules:
      ErrorMessages
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
